# surreals

./: .gitignore  CMakeLists.txt  README.md  surreals.ai  surreals.cpp  surreals.h
demos/: demo-finite-float2surreal.cpp  demo-finite-genesis-full.cpp  demo-finite-genesis-simple.cpp  demo-finite-mult.cpp  demo-infinite.cpp
